fix(config-checker): attempt to trigger darkreader's dark mode detection

--- a/config-checker/src/style.css
+++ b/config-checker/src/style.css
@@ -5,6 +5,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
+  background-color: black;
   background: linear-gradient(45deg, #040a0e, #27699e);
   color: #f8f8f8;
   margin: 0;
